trying to fix font

--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,27 @@
 @font-face {
   font-family: "Nyght Serif";
-  src: url("./public/font/NyghtSerif-Light.woff2") format("woff2");
+  src: url("/public/font/NyghtSerif-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nyght Serif";
-  src: url("./public/font/NyghtSerif-Regular.woff2") format("woff2");
+  src: url("/public/font/NyghtSerif-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nyght Serif";
-  src: url("./public/font/NyghtSerif-LightItalic.woff2") format("woff2");
+  src: url("/public/font/NyghtSerif-LightItalic.woff2") format("woff2");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nyght Serif";
-  src: url("./public/font/NyghtSerif-RegularItalic.woff2") format("woff2");
+  src: url("/public/font/NyghtSerif-RegularItalic.woff2") format("woff2");
   font-weight: 400;
   font-style: italic;
 }
